--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlantum/feather-react-ts": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -10,11 +11,18 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@walletconnect/web3-provider": "^1.3.6",
+    "authereum": "^0.1.0",
+    "easy-peasy": "^4.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-modal": "^6.0.1",
     "react-scripts": "4.0.2",
+    "sweetalert2": "^10.14.0",
     "typescript": "^4.1.4",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "web3": "^1.3.4",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
